--- a/nx.json
+++ b/nx.json
@@ -7,6 +7,7 @@
       "cache": true
     },
     "e2e": { "dependsOn": ["^build"], "cache": true },
+    "e2e-ci": { "dependsOn": ["^build"], "cache": true },
     "lint": { "cache": true },
     "test": { "cache": true }
   },
