update nx to v20

--- a/nx.json
+++ b/nx.json
@@ -6,10 +6,16 @@
       "outputs": ["{projectRoot}/.next"],
       "cache": true
     },
-    "e2e": { "dependsOn": ["^build"], "cache": true },
-    "e2e-ci": { "dependsOn": ["^build"], "cache": true },
-    "lint": { "cache": true },
-    "test": { "cache": true }
+    "e2e": {
+      "dependsOn": ["^build"],
+      "cache": true
+    },
+    "lint": {
+      "cache": true
+    },
+    "test": {
+      "cache": true
+    }
   },
   "defaultBase": "main",
   "namedInputs": {
@@ -19,9 +25,12 @@
   "plugins": [
     {
       "plugin": "@nx/playwright/plugin",
-      "options": { "targetName": "playwright:e2e" }
+      "options": {
+        "targetName": "playwright:e2e"
+      }
     }
   ],
   "nxCloudId": "6747999cb320693de30a521c",
-  "nxCloudUrl": "https://staging.nx.app"
+  "nxCloudUrl": "https://staging.nx.app",
+  "useLegacyCache": true
 }
