--- a/nx.json
+++ b/nx.json
@@ -10,6 +10,9 @@
       "dependsOn": ["^build"],
       "cache": true
     },
+    "e2e-ci--/**/**": {
+      "dependsOn": ["^build"]
+    },
     "lint": {
       "cache": true
     },
