--- a/nx.json
+++ b/nx.json
@@ -6,16 +6,9 @@
       "outputs": ["{projectRoot}/.next"],
       "cache": true
     },
-    "e2e": {
-      "dependsOn": ["^build"],
-      "cache": true
-    },
-    "lint": {
-      "cache": true
-    },
-    "test": {
-      "cache": true
-    }
+    "e2e": { "dependsOn": ["^build"], "cache": true },
+    "lint": { "cache": true },
+    "test": { "cache": true }
   },
   "defaultBase": "main",
   "namedInputs": {
@@ -25,12 +18,10 @@
   "plugins": [
     {
       "plugin": "@nx/playwright/plugin",
-      "options": {
-        "targetName": "playwright:e2e"
-      }
+      "options": { "targetName": "playwright:e2e" }
     }
   ],
-  "nxCloudId": "6747999cb320693de30a521c",
+  "nxCloudId": "674880b41abeb32ff7009d25",
   "nxCloudUrl": "https://staging.nx.app",
   "useLegacyCache": true
 }
