--- a/nx.json
+++ b/nx.json
@@ -21,7 +21,5 @@
       "options": { "targetName": "playwright:e2e" }
     }
   ],
-  "nxCloudId": "674880b41abeb32ff7009d25",
-  "nxCloudUrl": "https://staging.nx.app",
-  "useLegacyCache": true
+  "nxCloudId": "674880b41abeb32ff7009d25"
 }
